--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="shortcut icon" href="./images/favicon.png"> 
+    <!-- <link rel="shortcut icon" href="./images/favicon.png">  -->
+    <link rel="shortcut icon" href="./images/favicon_NT.jpg"> 
 
    
     <!--
@@ -25,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Plasma</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
